namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-person-record-preprod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-person-record-preprod
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "preprod"
    cloud-platform.justice.gov.uk/namespace: "hmpps-person-record-preprod"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "probation_in_court_alerts"
    cloud-platform.justice.gov.uk/application: "HMPPS Person record"
    cloud-platform.justice.gov.uk/owner: "Probation In Court Team: probation-in-court-team@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-person-record"
